styles.css
/* Local Variables Selector */
:root {
    --general-font: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    --btn-font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    --title-font-size: 2.7rem;
    --subtitle-font-size: 1.7rem;
    --trackables-font-size: 1.5rem;
    --btn-font-color: rgb(54, 54, 54);
    --btn-hover-font-color: rgb(21, 21, 21);
}

/* Selectors + Properties */

body {
    background-color: rgb(34, 34, 34);
    font-family: var(--general-font);
    color: #959595;
}

/* Class Selectors */

.error {
    color: red;
}

.upper-text {
    text-align: center;
    /* background-color: green; */
}

/* ID Selectors */

#text-section {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 2fr 0.5fr;
    grid-template-areas:
        "title title"
        "count step";
    justify-content: center;
    align-items: center;
    /* background-color: blue; */
}

#text-section #title {
    grid-area: title;
    font-size: var(--title-font-size);
    /* animation-name: enlarging-title;
    animation-duration: 5s;
    animation-iteration-count: infinite; */
}

#text-section #count-declaration {
    grid-area: count;
    font-size: var(--subtitle-font-size);
}

#text-section #count-display {
    position: relative;
    grid-area: count;
    font-size: var(--trackables-font-size);
    font-weight: bold;
    left: 8rem;
}

#text-section #step-declaration {
    grid-area: step;
    font-size: var(--subtitle-font-size);
}

#text-section #step-display {
    position: relative;
    grid-area: step;
    font-size: var(--trackables-font-size);
    font-weight: bold;
    left: 8rem;
}

#interactives-section {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: 5rem;
    gap: 2rem;
    /* background-color: yellow; */
}

#interactives-section .btn {
    border: none;
    border-radius: 10px;
    padding: 6px 16px;
    font-family: var(--btn-font);
    font-weight: bold;
    color: var(--btn-font-color);
    cursor: pointer;
    transition: color 0.7s ease, font-size 0.7s ease;
}

#interactives-section #increment-btn {
    background-color: green;
    transition: transform 1s ease;
}

#interactives-section #decrement-btn {
    background-color: red;
    transition: transform 1s ease;
}

#interactives-section #step-btn {
    background-color: rgb(58, 58, 255);
    transition: transform 1s ease;
}

#interactives-section #reset-btn {
    background-color: rgb(186, 186, 186);
    transition: transform 1s ease;
}

#interactives-section #step-div {
    display: grid;
    position: absolute;
    bottom: 15rem;
    grid-template-columns: 1fr 1.5fr 0.5fr;
    grid-template-rows: 1fr 1fr;
    grid-template-areas:
        "label step-input step-btn"
        "message message message";
    align-items: center;
}

#interactives-section #step-label {
    grid-area: label;
}

#interactives-section #step-input {
    grid-area: step-input;
    margin-left: 15px;
    margin-right: 15px;
    border-radius: 5px;
    border: none;
    width: 10rem;
    height: 1.4rem;
    transition: transform 1.5s ease;
}

#interactives-section #step-btn {
    grid-area: step-btn;
}

#interactives-section #step-error {
    grid-area: message;
    text-align: center;
}

/* Pseudo-classes */

#interactives-section .btn:hover {
    color: var(--btn-hover-font-color);
    transform: scale(1.07);
}

#interactives-section #increment-btn:hover {
    background-color: rgb(0, 100, 0);
}

#interactives-section #decrement-btn:hover {
    background-color: rgb(200, 0, 0);
}

#interactives-section #reset-btn:hover {
    background-color: rgba(230, 230, 230, 0.6);
}

#interactives-section #step-btn:hover {
    background-color: rgb(0, 0, 200);
}

#interactives-section #step-input::placeholder {
    padding-left: 8px;
    font-family: var(--btn-font);
    color: rgba(0, 0, 0, 0.45);
}

#interactives-section #step-input:focus {
    outline: none;
    transform: scale(1.07);
}

/* Keyframes Animations */

@keyframes enlarging-title {
    0% { font-size: calc(var(--title-font-size) - 0.5rem); }
    60% { font-size: calc(var(--title-font-size) + 0.6rem);}
    100% { font-size: calc(var(--title-font-size) - 0.5rem); }
}

